Ensure attribution percentages don't wrap onto a new line (#153)
Some languages prefer a space between the number and the percent symbol
but this shouldn't be separated by a new line.

Bug: T242759

--- a/src/less/RevisionPopupWidget.less
+++ b/src/less/RevisionPopupWidget.less
@@ -61,6 +61,10 @@
 		margin-bottom: @line-break-height;
 		margin-top: @line-break-height * 2;
 	}
+
+	.wwt-revisionPopupWidget-attribution-percentage {
+		white-space: nowrap;
+	}
 }
 
 /* Adapted from http://cloudcannon.com/deconstructions/2014/11/15/facebook-content-placeholder-deconstruction.html */
